--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">Nite</string>
+    <string name="app_name">Nite-NightApp</string>
+    <string name="slogan">Now you know where to go!</string>
+    <string name="title_activity_sign_in">SignIn</string>
+    <string name="password">Introduza a sua Password: </string>
+    <string name="email">Introduza o seu email: </string>
+    <string name="title_activity_home">Home</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+
 </resources>
